force-app/main/default/objects/Rejected_Notification__c/Rejected_Notification__c.object-meta.xml
<CustomObject>
    <label>Rejected Notification</label>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Rejected Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rejected Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>