force-app/main/default/objects/Rejected_Notification__c/fields/Code_erreur__c.field-meta.xml
<CustomField>
    <fullName>Code_erreur__c</fullName>
    <label>Code erreur</label>
    <length>20</length>
    <type>Text</type>
</CustomField>