force-app/main/default/objects/Rejected_Notification__c/fields/Message_erreur__c.field-meta.xml
<CustomField>
    <fullName>Message_erreur__c</fullName>
    <label>Message erreur</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>